# l2switch

./: .gitignore  README.md
sw-engine/: Cargo.toml
sw-engine/engine/: Cargo.toml
sw-engine/engine/src/: config.rs  ffi.rs  lib.rs  macros.rs
sw-engine/engine/src/dockerlib/: client_comm.rs  mod.rs
sw-engine/engine/src/dpdk/: mbuf.rs  mempool.rs  memring.rs  memzone.rs  mod.rs  port.rs
sw-engine/engine/src/net/: ether.rs  ipv4.rs  mac.rs  mod.rs  routing_table.rs
sw-engine/engine/src/runtime/: README.md  coremap.rs  coremap_old.rs  engine.rs  mod.rs  processing.rs
sw-engine/ffi/: Cargo.toml  build.rs
sw-engine/ffi/src/: bindings.h  lib.rs  shim.c
