[package]
name = "engine"
version = "0.1.0"
authors = ["Ratnadeep Bhattacharya <bhattacharya.ratnadeep@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
dpdk_ffi = { version = "0.1.0", path = "../ffi" }
clippy = "0.0.302"
libc = "0.2.80"
# metrics-core = { version = "0.5", optional = true }
# metrics-runtime = { version = "0.13.1", optional = true, default-features = false }
once_cell = "1.5.2"
tracing = "0.1.21"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"
regex = "1.4.1"
futures = "0.3.7"
crossbeam-deque = "0.8.0"
crossbeam-utils = "0.8.0"
crossbeam-queue = "0.3.0"
zmq = "0.9.2"
zmq-sys = "0.11.0"
state = { version = "0.4.2", features = ["tls"] }
dashmap = "3.11.10"
serde_json = "1.0"
lazy_static = "1.4.0"
async-std = "1.7.0"
chashmap = "2.2.2"