[package]
name = "dpdk_ffi"
version = "0.1.0"
authors = ["Ratnadeep Bhattacharya <bhattacharya.ratnadeep@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/capsule-rs/capsule"
build = "build.rs"
links = "dpdk"
description = """
DPDK FFI bindings for native libraries.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dpdk_ffi"
doctest = false

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0"
libc = "0.2"

[features]
rustdoc = []

[package.metadata.docs.rs]
features = ["rustdoc"]